--- a/.gitignore
+++ b/.gitignore
@@ -216,7 +216,9 @@ __marimo__/
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
+frontend/.next
+frontend/node_modules
+frontend/docs
 # testing
 /coverage
 
