--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,6 @@ sqlalchemy==2.0.45
 python-dotenv==1.2.1
 psycopg2-binary==2.9.11
 pydantic==2.12.5
-httpx>=0.25.0
-griffe>=1.0.0
+httpx==0.28.1
+griffe==1.15.0
 pydantic-ai[openai]==0.0.14
